--- a/index.html
+++ b/index.html
@@ -119,16 +119,13 @@
             >
               Ramalan "Mines"
             </a>
-            <button
-              disabled
-              class="game-btn disabled-btn bg-gray-600 text-white font-bold py-3 px-4 rounded-lg"
+            <a
+              href="https://my-penalty.vercel.app/"
+              class="game-btn bg-purple-600 hover:bg-purple-700 text-white font-bold py-3 px-4 rounded-lg"
             >
-              Ramalan "Penalty" (Akan Datang)
-            </button>
+              Ramalan "Penalty"
+            </a>
           </div>
-          <p class="mt-4 text-gray-400 text-sm">
-            Ramalan Penalty akan tersedia tidak lama lagi untuk pemain Malaysia.
-          </p>
         </div>
       </section>
 
